Bug fixed in button provider for the toggleInfo of Source button. Fixed style for the source box overflow.

--- a/app/styles/_box.scss
+++ b/app/styles/_box.scss
@@ -272,6 +272,11 @@
         }
         padding : 0;
     }
+    &.box-source {
+        .box-body {
+            overflow-y: scroll;
+        }
+    }
     // BODY
     &.topBoxOpened {
         .box-body {
